refactor: extract request-service, fix Feign, validation and error handling