@@ -14,7 +14,13 @@ import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 import org.springframework.web.client.HttpClientErrorException;
 import org.springframework.web.method.annotation.MethodArgumentTypeMismatchException;
-import ru.yandex.practicum.common.exception.model.ErrorResponse;
+import ru.yandex.practicum.common.exception.ConflictException;
+import ru.yandex.practicum.common.exception.InternalServerException;
+import ru.yandex.practicum.common.exception.NotFoundException;
+import ru.yandex.practicum.common.exception.ValidationException;
+import ru.yandex.practicum.common.exception.model.ApiError;
+
+import java.time.LocalDateTime;
 
 
 @Slf4j
@@ -23,101 +29,139 @@ public class ErrorHandler {
 
     @ExceptionHandler(ConflictException.class)
     @ResponseStatus(HttpStatus.CONFLICT)
-    public ErrorResponse handleConflict(ConflictException e) {
+    public ApiError handleConflict(ConflictException e) {
         log.error("Conflict error: {}", e.getMessage());
-        return new ErrorResponse("ERROR[409]: Conflict", e.getMessage());
+        return ApiError.builder()
+                .status("CONFLICT")
+                .reason("Integrity constraint has been violated.")
+                .message(e.getMessage())
+                .timestamp(LocalDateTime.now())
+                .build();
     }
 
     @ExceptionHandler(NotFoundException.class)
     @ResponseStatus(HttpStatus.NOT_FOUND)
-    public ErrorResponse handleNotFound(NotFoundException e) {
+    public ApiError handleNotFound(NotFoundException e) {
         log.error("Not found error: {}", e.getMessage());
-        return new ErrorResponse("ERROR[404]: Not Found", e.getMessage());
+        return ApiError.builder()
+                .status("NOT_FOUND")
+                .reason("The required object was not found.")
+                .message(e.getMessage())
+                .timestamp(LocalDateTime.now())
+                .build();
     }
 
     @ExceptionHandler(ValidationException.class)
     @ResponseStatus(HttpStatus.BAD_REQUEST)
-    public ErrorResponse handleValidation(ValidationException e) {
+    public ApiError handleValidation(ValidationException e) {
         log.error("Validation error: {}", e.getMessage());
-        return new ErrorResponse("ERROR[400]: Bad Request", e.getMessage());
-    }
-
-    @ExceptionHandler(DataIntegrityViolationException.class)
-    @ResponseStatus(HttpStatus.BAD_REQUEST)
-    public ErrorResponse handleDataIntegrityViolation(DataIntegrityViolationException e) {
-        log.error("Bad request error: {}", e.getMessage());
-        return new ErrorResponse("ERROR[400]: Data integrity violation", e.getMessage());
+        return ApiError.builder()
+                .status("BAD_REQUEST")
+                .reason("Incorrectly made request.")
+                .message(e.getMessage())
+                .timestamp(LocalDateTime.now())
+                .build();
     }
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
     @ResponseStatus(HttpStatus.BAD_REQUEST)
-    public ErrorResponse handleMethodArgumentNotValid(MethodArgumentNotValidException e) {
+    public ApiError handleMethodArgumentNotValid(MethodArgumentNotValidException e) {
         log.error("Validation error: {}", e.getMessage());
-        return new ErrorResponse("ERROR[400]: Validation Failed",
-                e.getBindingResult().getAllErrors().get(0).getDefaultMessage());
+        String message = e.getBindingResult().getAllErrors().getFirst().getDefaultMessage();
+        return ApiError.builder()
+                .status("BAD_REQUEST")
+                .reason("Incorrectly made request.")
+                .message(message)
+                .timestamp(LocalDateTime.now())
+                .build();
+    }
+
+    @ExceptionHandler(DataIntegrityViolationException.class)
+    @ResponseStatus(HttpStatus.CONFLICT)
+    public ApiError handleDataIntegrityViolation(DataIntegrityViolationException e) {
+        log.error("Data integrity violation: {}", e.getMessage());
+        return ApiError.builder()
+                .status("CONFLICT")
+                .reason("Integrity constraint has been violated.")
+                .message(e.getMostSpecificCause().getMessage())
+                .timestamp(LocalDateTime.now())
+                .build();
     }
 
     @ExceptionHandler(IllegalArgumentException.class)
     @ResponseStatus(HttpStatus.BAD_REQUEST)
-    public ErrorResponse handleIllegalArgument(IllegalArgumentException e) {
+    public ApiError handleIllegalArgument(IllegalArgumentException e) {
         log.error("Illegal argument: {}", e.getMessage());
-        return new ErrorResponse("ERROR[400]: Bad Request", e.getMessage());
+        return ApiError.builder()
+                .status("BAD_REQUEST")
+                .reason("Incorrectly made request.")
+                .message(e.getMessage())
+                .timestamp(LocalDateTime.now())
+                .build();
     }
 
     @ExceptionHandler(HttpMessageNotReadableException.class)
     @ResponseStatus(HttpStatus.BAD_REQUEST)
-    public ErrorResponse handleHttpMessageNotReadable(HttpMessageNotReadableException e) {
+    public ApiError handleHttpMessageNotReadable(HttpMessageNotReadableException e) {
         log.error("Message not readable: {}", e.getMessage());
-        return new ErrorResponse("ERROR[400]: Bad Request", "Неверный формат JSON");
+        return ApiError.builder()
+                .status("BAD_REQUEST")
+                .reason("Incorrectly made request.")
+                .message("Неверный формат JSON")
+                .timestamp(LocalDateTime.now())
+                .build();
     }
 
     @ExceptionHandler(MethodArgumentTypeMismatchException.class)
     @ResponseStatus(HttpStatus.BAD_REQUEST)
-    public ErrorResponse handleMethodArgumentTypeMismatch(MethodArgumentTypeMismatchException e) {
+    public ApiError handleMethodArgumentTypeMismatch(MethodArgumentTypeMismatchException e) {
         log.error("Argument type mismatch: {}", e.getMessage());
-        return new ErrorResponse("ERROR[400]: Bad Request",
-                "Неверный тип параметра: " + e.getName());
+        return ApiError.builder()
+                .status("BAD_REQUEST")
+                .reason("Incorrectly made request.")
+                .message("Неверный тип параметра: " + e.getName())
+                .timestamp(LocalDateTime.now())
+                .build();
     }
 
     @ExceptionHandler(HttpMediaTypeNotSupportedException.class)
     @ResponseStatus(HttpStatus.BAD_REQUEST)
-    public ErrorResponse handleHttpMediaTypeNotSupported(HttpMediaTypeNotSupportedException e) {
+    public ApiError handleHttpMediaTypeNotSupported(HttpMediaTypeNotSupportedException e) {
         log.error("Media type not supported: {}", e.getMessage());
-        return new ErrorResponse("ERROR[400]: Bad Request", "Неподдерживаемый тип данных");
+        return ApiError.builder()
+                .status("BAD_REQUEST")
+                .reason("Incorrectly made request.")
+                .message("Неподдерживаемый тип данных")
+                .timestamp(LocalDateTime.now())
+                .build();
     }
 
     @ExceptionHandler(InternalServerException.class)
     @ResponseStatus(HttpStatus.INTERNAL_SERVER_ERROR)
-    public ErrorResponse handleInternalServer(InternalServerException e) {
+    public ApiError handleInternalServer(InternalServerException e) {
         log.error("Internal server error: {}", e.getMessage());
-        return new ErrorResponse("ERROR[500]: Internal Server Error", e.getMessage());
-    }
-
-    @ExceptionHandler(Exception.class)
-    @ResponseStatus(HttpStatus.INTERNAL_SERVER_ERROR)
-    public ErrorResponse handleAllExceptions(Exception e) {
-        log.error("Unexpected error: {}", e.getMessage(), e);
-        return new ErrorResponse("ERROR[500]: Internal Server Error",
-                "Произошла непредвиденная ошибка");
-    }
-
-    @ExceptionHandler(Throwable.class)
-    @ResponseStatus(HttpStatus.INTERNAL_SERVER_ERROR)
-    public ErrorResponse handleThrowable(Throwable e) {
-        log.error("Unexpected throwable: {}", e.getMessage(), e);
-        return new ErrorResponse("ERROR[500]: Internal Server Error",
-                "Критическая ошибка сервера");
+        return ApiError.builder()
+                .status("INTERNAL_SERVER_ERROR")
+                .reason("Internal server error")
+                .message(e.getMessage())
+                .timestamp(LocalDateTime.now())
+                .build();
     }
 
     @ExceptionHandler(ConstraintViolationException.class)
     @ResponseStatus(HttpStatus.BAD_REQUEST)
-    public ErrorResponse handleConstraintViolation(ConstraintViolationException e) {
+    public ApiError handleConstraintViolation(ConstraintViolationException e) {
         log.error("Validation error: {}", e.getMessage());
-        return new ErrorResponse("ERROR[400]: Bad Request", e.getMessage());
+        return ApiError.builder()
+                .status("BAD_REQUEST")
+                .reason("Incorrectly made request.")
+                .message(e.getMessage())
+                .timestamp(LocalDateTime.now())
+                .build();
     }
 
     @ExceptionHandler(FeignException.class)
-    public ResponseEntity<ErrorResponse> handleFeignException(FeignException e) {
+    public ResponseEntity<ApiError> handleFeignException(FeignException e) {
         HttpStatus status = HttpStatus.resolve(e.status());
         if (status == null) {
             status = HttpStatus.INTERNAL_SERVER_ERROR;
@@ -125,14 +169,36 @@ public class ErrorHandler {
         log.warn("Ошибка при вызове другого сервиса: {}", e.getMessage());
         return ResponseEntity
                 .status(status)
-                .body(new ErrorResponse("Ошибка внешнего сервиса", e.getMessage()));
+                .body(ApiError.builder()
+                        .status(status.name())
+                        .reason("External service error")
+                        .message(e.getMessage())
+                        .timestamp(LocalDateTime.now())
+                        .build());
     }
 
     @ExceptionHandler(HttpClientErrorException.class)
-    public ResponseEntity<ErrorResponse> handleHttpClientError(HttpClientErrorException e) {
+    public ResponseEntity<ApiError> handleHttpClientError(HttpClientErrorException e) {
         log.warn("HTTP ошибка клиента: {}", e.getMessage());
         return ResponseEntity
                 .status(e.getStatusCode())
-                .body(new ErrorResponse("Ошибка HTTP", e.getMessage()));
+                .body(ApiError.builder()
+                        .status(e.getStatusCode().toString())
+                        .reason("HTTP error")
+                        .message(e.getMessage())
+                        .timestamp(LocalDateTime.now())
+                        .build());
+    }
+
+    @ExceptionHandler(Exception.class)
+    @ResponseStatus(HttpStatus.INTERNAL_SERVER_ERROR)
+    public ApiError handleAllExceptions(Exception e) {
+        log.error("Unexpected error: {}", e.getMessage(), e);
+        return ApiError.builder()
+                .status("INTERNAL_SERVER_ERROR")
+                .reason("Unexpected error")
+                .message(e.getMessage())
+                .timestamp(LocalDateTime.now())
+                .build();
     }
 }
